	Backward compatibility issues:
		- old binary modal joint databases no longer supported
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix binary modal joint database in MinGW
		- fix undefined const error message bug

MBDyn 1.5.4
	Enhancements:
		- added '-N' command-line switch to set threads number
		- added module-nonsmooth-node: non-smooth dynamics support
		  using SICONOS <http://siconos.gforge.inria.fr/>
		  (Matteo Fancello)
		- added 3D variant of continuous contact constitutive law
		  (Matteo Fancello)
		- added line search nonlinear solver (Reinhard Resch)
		- added condition number output (Reinhard Resch)
		- added scalar support genel private data (Reinhard Resch)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- simplify escaping of delimiter in input
		- fix deformable hinge early Jacobian assembly
		  (noted by Filippo Tunesi)
		- fix conjugate transpose of `X' in pod.m
		- fix modal element when origin redefined
		  (noted by Sebastiano Fichera)
		- fix block 11 one row too much in output of femgen
		  (noted by Sebastiano Fichera)
		- fix arpack memory issue (noted by Reinhard Resch)
		- fixed NaivePermMatrixHandler resize
		  (noted by Reinhard Resch)
		- fix array drive caller derivative bug

MBDyn 1.5.3
	Enhancements:
		- added forces NetCDF support (Louis Gagnon)
		- added support for modal damping matrix in modal joint db
		- femgen(1) more user friendly (and documented)
	Backward compatibility issues:
		- nodes and elements now handled in strict input order
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken